Spacing and font sizes fixed

--- a/assets/apollo.scss
+++ b/assets/apollo.scss
@@ -1,4 +1,4 @@
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+@import "reset";
 
 :root {
   --primary-color: #333;
@@ -61,36 +61,41 @@ a {
 .page-content {
   display: grid;
   grid-template-columns: minmax(auto, 900px);
-  padding: 0 20px;
+  padding: 20px;
   justify-content: center;
 }
 
 .header {
   padding-top: 40px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
+  font-family: "Oxanium", cursive;
   font-weight: 700;
-  text-transform: uppercase;
   line-height: 1;
+  text-transform: uppercase;
 
   @media (min-width: 768px) {
     padding-top: 100px;
-    padding-bottom: 36px;
-    font-size: 28px;
+    padding-bottom: 80px;
   }
 
   .header-content {
     width: fit-content;
-    display: inline-block;
     position: relative;
-    margin: 0;
     padding: 10px 18px;
-    font-family: 'Oxanium', cursive;
     color: var(--primary-color);
     background: var(--header-color);
+    font-size: 24px;
+
+    &:first-child {
+      font-size: 30px;
+    }
 
     @media (min-width: 768px) {
+      font-size: 48px;
+
       &:first-child {
         position: relative;
+        font-size: 60px;
 
         &:after {
           content: " 37.8136° S \A 144.9631° E";
@@ -105,27 +110,25 @@ a {
           font-weight: 400;
           white-space: pre;
         }
-
       }
     }
   }
 }
 
-.hidden {
-  display: none;
-}
-
 .intro {
-  padding-top: 20px;
-  padding-bottom: 20px;
   font-size: 20px;
-  font-family: 'Oxanium', cursive;
+  font-family: "Oxanium", cursive;
   box-shadow: 0 0 100px #dfdfdf;
 
   @media (min-width: 768px) {
-    padding-top: 28px;
-    padding-bottom: 28px;
     font-size: 28px;
+  }
+}
+
+.about {
+  .about-content {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 
@@ -134,9 +137,6 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 100px;
   align-items: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
   font-weight: 700;
   text-align: center;
 }
@@ -151,4 +151,8 @@ a {
   @media (min-width: 768px) {
     float: right;
   }
+}
+
+.hidden {
+  display: none;
 }
